--- a/kafka-to-elastic-service/pom.xml
+++ b/kafka-to-elastic-service/pom.xml
@@ -101,6 +101,10 @@
             <groupId>com.chat</groupId>
             <artifactId>elastic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>kafka-admin</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
