--- a/search-service/pom.xml
+++ b/search-service/pom.xml
@@ -27,10 +27,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-config</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -56,10 +56,10 @@
             <groupId>com.chat</groupId>
             <artifactId>elastic</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.chat</groupId>
-            <artifactId>common</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.chat</groupId>-->
+<!--            <artifactId>common</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
