--- a/kafka-to-elastic-service/src/main/resources/application.yml
+++ b/kafka-to-elastic-service/src/main/resources/application.yml
@@ -58,3 +58,11 @@ retry-config:
   multiplier: 2.0
   maxAttempts: 3
   sleepTimeMs: 2000
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:80/eureka/
+  instance:
+    lease-expiration-duration-in-seconds: 5
+    lease-renewal-interval-in-seconds: 2
