--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -72,7 +72,7 @@ services:
       - "EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE=http://discovery-service:8761/eureka/"
       - "SPRING_ZIPKIN_SENDER_TYPE=web"
       - "SPRING_SLEUTH_SAMPLER_PROBABILITY=1.0"
-      - "SPRING_DATASOURCE_URL=jdbc:postgresql://user-db:5432/users"
+      - "SPRING_DATASOURCE_URL=jdbc:postgresql://user-db:5432/user"
       - "SPRING_DATASOURCE_USERNAME=postgres"
       - "SPRING_DATASOURCE_PASSWORD=password"
       - "SPRING_JPA_HIBERNATE_DDL_AUTO=update"
@@ -97,7 +97,7 @@ services:
       - "EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE=http://discovery-service:8761/eureka/"
       - "SPRING_ZIPKIN_SENDER_TYPE=web"
       - "SPRING_SLEUTH_SAMPLER_PROBABILITY=1.0"
-      - "SPRING_DATASOURCE_URL=jdbc:postgresql://user-db:5432/users"
+      - "SPRING_DATASOURCE_URL=jdbc:postgresql://user-db:5432/notification"
       - "SPRING_DATASOURCE_USERNAME=postgres"
       - "SPRING_DATASOURCE_PASSWORD=password"
       - "SPRING_JPA_HIBERNATE_DDL_AUTO=update"
