--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 84
 
+
 log:
   app-name: user-service
 
@@ -13,18 +14,18 @@ kafka-config:
     - 'user-to-elastic'
   numOfPartitions: 2
   replicationFactor: 3
-redis:
-  host: http://localhost
-  port: 6379
 
 spring:
+  redis:
+    host: localhost
+    port: 6379
   data:
     r2dbc:
       repositories:
         enabled: true
 
   r2dbc:
-    url: r2dbc:postgresql://user:password@localhost:5432/users
+    url: r2dbc:postgresql://user:password@localhost:5432/user
   main:
     allow-bean-definition-overriding: true
   application:
@@ -41,6 +42,8 @@ spring:
 #      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
     properties:
       schema.registry.url: http://localhost:8081
+  profiles:
+    active: local
 
 retry-config:
   initialIntervalMs: 1000
