--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
           enabled: false
           lowerCaseServiceId: true
   redis:
-    host: http://localhost
+    host: localhost
     port: 6379
 
 management:
