--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -20,6 +20,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>rabbitmq</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
