rabbitmq module converted to kotlin lang

--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -150,6 +150,10 @@
             <groupId>com.chat</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>rabbitmq</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
