--- a/search-service/pom.xml
+++ b/search-service/pom.xml
@@ -64,6 +64,16 @@
 <!--            <groupId>com.chat</groupId>-->
 <!--            <artifactId>common</artifactId>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
