--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -138,6 +138,17 @@
             <groupId>com.chat</groupId>
             <artifactId>rabbitmq</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
