--- a/asset-service/src/main/resources/application.yml
+++ b/asset-service/src/main/resources/application.yml
@@ -15,6 +15,13 @@ spring:
     allow-bean-definition-overriding=true:
   application:
     name: asset-service
+  data:
+    redis:
+      repositories:
+        enabled: true
+  redis:
+    port: 6379
+    host: localhost
 
 retry-config:
   initialIntervalMs: 1000
