--- a/pom.xml
+++ b/pom.xml
@@ -130,18 +130,12 @@
             <!-- END OF WEBSOCKET-->
 
             <!-- REDIS -->
-            <!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
-            <dependency>
-                <groupId>org.springframework.session</groupId>
-                <artifactId>spring-session-data-redis</artifactId>
-                <version>2.7.1</version>
-            </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>2.7.12</version>
+                <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
 
             <!-- REDIS -->
