--- a/user-service/src/test/resources/application.yml
+++ b/user-service/src/test/resources/application.yml
@@ -90,3 +90,6 @@ eureka:
   instance:
     lease-expiration-duration-in-seconds: 5
     lease-renewal-interval-in-seconds: 2
+
+scheduling:
+  enabled: true
