consumer config added

--- a/kafka-to-elastic-service/src/main/resources/application.yml
+++ b/kafka-to-elastic-service/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
       repositories:
         enabled: true
   elasticsearch:
-#    uris: http://localhost:9200
+    #    uris: http://localhost:9200
     password: password
     username: elastic
 
@@ -66,3 +66,21 @@ eureka:
   instance:
     lease-expiration-duration-in-seconds: 5
     lease-renewal-interval-in-seconds: 2
+
+kafka-consumer-config:
+  key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+  consumer-group-id: twitter-topic-consumer
+  auto-offset-reset: earliest
+  specific-avro-reader-key: specific.avro.reader
+  specific-avro-reader: true
+  batch-listener: true
+  auto-startup: true
+  concurrency-level: 3
+  session-timeout-ms: 10000
+  heartbeat-interval-ms: 3000
+  max-poll-interval-ms: 300000
+  max-poll-records: 500
+  max-partition-fetch-bytes-default: 1048576
+  max-partition-fetch-bytes-boost-factor: 1
+  poll-timeout-ms: 150
