--- a/kafka-to-elastic-service/src/main/resources/application.yml
+++ b/kafka-to-elastic-service/src/main/resources/application.yml
@@ -62,10 +62,24 @@ retry-config:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:80/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     lease-expiration-duration-in-seconds: 5
     lease-renewal-interval-in-seconds: 2
+
+management:
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure.include: health, prometheus, gateway
+      path-mapping.prometheus: metrics
+  endpoint:
+    health:
+      show-details: always
+    prometheus:
+      cache.time-to-live: 1ms
+    gateway:
+      enabled: true
 
 kafka-consumer-config:
   key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
