recommended cache dependecny added, user logger bean added, some logs added

--- a/docker-compose/config/logback.conf
+++ b/docker-compose/config/logback.conf
@@ -1,16 +1,19 @@
 input {
-  file {
-    path => "/logs/*.log"
-    codec => "json"
-    type => "logback"
-  }
-}
-
-output {
-  if [type]=="logback" {
-    elasticsearch {
-      hosts => [ "http://elastic-1:9200" ]
-      index => "logback-chat-%{+YYYY.MM.dd}"
+    tcp {
+        port => 5000
+        type => syslog
+        codec => json_lines
     }
-  }
+}
+filter {
+
+}
+output {
+    stdout { # This will log all messages so that we can confirm that Logstash is receiving them
+        codec => rubydebug
+    }
+    elasticsearch {
+        hosts => [ "http://elastic-1:9200" ]
+        index => "logstash-%{+YYYY.MM.dd}"
+    }
 }
