--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -80,6 +80,11 @@
             <groupId>com.chat</groupId>
             <artifactId>common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
     </dependencies>
 
 
