--- a/kafka-to-elastic-service/src/main/resources/application.yml
+++ b/kafka-to-elastic-service/src/main/resources/application.yml
@@ -20,6 +20,15 @@ elastic-config:
   username: elastic
 
 spring:
+  zipkin:
+    base-url: http://localhost:9411/
+    sender:
+      type: web
+    enabled: true
+    locator:
+      discovery:
+        enabled: true
+    discovery-client-enabled: true
   main:
     allow-bean-definition-overriding: true
   application:
