--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -190,6 +190,24 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
         <!-- MONITORING -->
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
+        <!-- LOGBACK -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- LOGBACK -->
     </dependencies>
 
     <build>
