--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -33,10 +33,10 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!-- SECURITY -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-reactor-netty</artifactId>-->
