flyway configs updated

--- a/migrations/notification-db/pom.xml
+++ b/migrations/notification-db/pom.xml
@@ -37,8 +37,8 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>8.5.13</version>
                 <configuration>
-                    <user>user</user>
-                    <password>password</password>
+<!--                    <user>user</user>-->
+<!--                    <password>password</password>-->
                     <driver>org.postgresql.Driver</driver>
                     <url>jdbc:postgresql://localhost:5432/notification</url>
                     <schemas>
