--- a/migrations/user-db/pom.xml
+++ b/migrations/user-db/pom.xml
@@ -29,6 +29,27 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.flywaydb</groupId>
+                        <artifactId>flyway-maven-plugin</artifactId>
+                        <version>8.5.13</version>
+<!--                        <configuration>-->
+<!--                            <user>user</user>-->
+<!--                        </configuration>-->
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -36,13 +57,16 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>8.5.13</version>
                 <configuration>
-                    <user>user</user>
-                    <password>password</password>
+                    <validateOnMigrate>true</validateOnMigrate>
                     <driver>org.postgresql.Driver</driver>
                     <url>jdbc:postgresql://localhost:5432/user</url>
+                    <createSchemas>false</createSchemas>
                     <schemas>
                         <schema>public</schema>
                     </schemas>
+                    <sqlMigrationSuffixes>
+                        <sqlMigrationSuffix>.sql</sqlMigrationSuffix>
+                    </sqlMigrationSuffixes>
                 </configuration>
             </plugin>
         </plugins>
