--- a/migrations/user-db/pom.xml
+++ b/migrations/user-db/pom.xml
@@ -41,9 +41,9 @@
                         <groupId>org.flywaydb</groupId>
                         <artifactId>flyway-maven-plugin</artifactId>
                         <version>8.5.13</version>
-<!--                        <configuration>-->
-<!--                            <user>user</user>-->
-<!--                        </configuration>-->
+                        <configuration>
+                            <user>user</user>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
